melhorias em relacao a disposicao do report e as telas de payment etc

--- a/frontend/payment-success.html
+++ b/frontend/payment-success.html
@@ -203,9 +203,10 @@
                 features: [
                     "Tudo do Professional",
                     "Multi-usuário (até 10)",
-                    "White label",
                     "Integrações personalizadas",
-                    "Gerente de conta dedicado"
+                    "SLA garantido",
+                    "Gerente de conta dedicado",
+                    "Consultoria mensal"
                 ]
             }
         };
