--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -1023,6 +1023,14 @@
                             <i class="fas fa-sync"></i>
                             Atualizar
                         </button>
+                        <button class="btn-sm" onclick="generateFullReport()" style="margin-left:8px;">
+                            <i class="fas fa-file-pdf"></i>
+                            Gerar Relatório Completo
+                        </button>
+                        <button class="btn-sm" onclick="showFullReportPreview()" style="margin-left:8px;">
+                            <i class="fas fa-eye"></i>
+                            Visualizar Relatório Completo
+                        </button>
                     </div>
                     <div class="card-body">
                         <div id="available-scans">
@@ -1709,6 +1717,7 @@
         <a href="privacy.html" style="color: #667eea; text-decoration: none;">Política de Privacidade</a>.
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" integrity="sha512-pdCVFUWsxl1A4g0uV6fyJ3nrnTGeWnZN2Tl/56j45UvZ1OMdm9CIbctuIHj+yBIRTUUyv6I9+OivXj4i0LPEYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/modern-app.js?v=7.3"></script>
     <script>
         (function(){
