--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -540,7 +540,7 @@
                         <div class="faq-answer-content">
                             <p>Você pode entrar em contato por:</p>
                             <ul>
-                                <li><strong>Email:</strong> <a href="mailto:mac526@hotmail.com">mac526@hotmail.com</a></li>
+                                <li><strong>Email:</strong> <a href="mailto:thomaz2523@gmail.com">thomaz2523@gmail.com</a></li>
                                 <li><strong>Tempo de resposta:</strong>
                                     <ul>
                                         <li>FREE/Starter: 24-48 horas</li>
@@ -584,7 +584,7 @@
                     </div>
                     <div class="faq-answer">
                         <div class="faq-answer-content">
-                            <p>Entre em contato com nosso suporte via email (<a href="mailto:mac526@hotmail.com">mac526@hotmail.com</a>) solicitando a exclusão da conta. Processaremos seu pedido em até 48 horas.</p>
+                            <p>Entre em contato com nosso suporte via email (<a href="mailto:thomaz2523@gmail.com">thomaz2523@gmail.com</a>) solicitando a exclusão da conta. Processaremos seu pedido em até 48 horas.</p>
                             <p><strong>Atenção:</strong> A exclusão é permanente e todos os dados serão removidos.</p>
                         </div>
                     </div>
@@ -599,7 +599,7 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <strong>Suporte</strong>
-                        <p>Email: <a href="mailto:mac526@hotmail.com">mac526@hotmail.com</a></p>
+                        <p>Email: <a href="mailto:thomaz2523@gmail.com">thomaz2523@gmail.com</a></p>
                         <p>Ficaremos felizes em ajudar!</p>
                     </div>
                 </div>
