--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -802,17 +802,13 @@
             </div>
             <div class="footer-section">
                 <h3>Empresa</h3>
-                <a href="#">Sobre Nós</a>
-                <a href="#">Blog</a>
-                <a href="#">Carreiras</a>
-                <a href="#">Contato</a>
+                <a href="sobre.html">Sobre Nós</a>
+                <a href="contato.html">Contato</a>
             </div>
             <div class="footer-section">
                 <h3>Legal</h3>
                 <a href="terms.html">Termos de Uso</a>
                 <a href="privacy.html">Política de Privacidade</a>
-                <a href="#">Segurança</a>
-                <a href="#">SLA</a>
             </div>
         </div>
         <div class="footer-bottom">
